--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,117 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+''' Tentang Rekening Bank'''
+# tambahkan import waktu biar seru
+# kalau bisa password ubah menjadi (*) 
+# next project diatas
+import sys
 
-# C extensions
-*.so
+class RekeningBank:
+    def __init__(self,jumlah_saldo,selamat_datang,password = 225060 ) -> None:
+        self.jumlah_saldo = jumlah_saldo
+        self.password = password
+        self.selamat_datang = selamat_datang
+      
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+    def set_login(self,login = '',kesempatan = 3):
+         self.kesempatan = kesempatan
+         self.login = login
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+         while self.kesempatan > 0:
+             self.login = int(input(" Masukkan password : "))
+             if self.login != self.password:
+              self.kesempatan -= 1
+              print("sandi salah")
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+              if self.kesempatan == 0:
+                 print(" kartu anda terblokir ")
+                 exit()
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+             elif self.login == self.password:
+                 print("sandi benar")
+                 break
+             else : None 
+             
+    def pilihnum(self,pilih = ' ',num1 = 100_000,num2 = '300_000',num3 = '500_000',num4 = '1000_000',num5 = '1_500_000'):
+        self.pilih = pilih
+        self.pilih = input(" Pilih Nominal : ")
+        self.num1 = num1
+        self.num2 = num2
+        self.num3 = num3
+        self.num4 = num4
+        self.num5 = num5
 
-# Translations
-*.mo
-*.pot
+        match self.pilih :
+            case '1' : 
+               self.pilih = 100000
+            case '2' :
+                 self.pilih = 300000
+            case '3' :
+                self.pilih = 500_000
+            case '4' :
+                 self.pilih = 1_000_000
+            case '5' :
+                self.pilih = 1_500_000
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
+    def menabung_saldo(self,saldo_terbaru = '',tabung_saldo = '',tekan = '',chance = 1):
+        self.saldo_update = saldo_terbaru
+        self.menabung = tabung_saldo
+        self.chance = chance
+        self.tekan = tekan
+        self.tekan = input(" ketik   buat menabung : ")
+        no = 1
+        match self.tekan :
+            case 'yes':
+              self.menabung = input(" Masukkan Nominal yang akan di tabung : ")
+              self.saldo_update =  int(self.menabung) + int(self.jumlah_saldo)
+              print(f"jumlah saldo  awal {self.jumlah_saldo} berhasil ditambahkan,saldo anda sekarang sebesar {self.saldo_update} \n")
+            case "no" :
+             print(f" jumlah saldo masih sama,sebesar {self.jumlah_saldo}")
+             
+    def menarik_saldo(self ,ambil_saldo = '',chance1 = 2 ):
+       
+        self.chance = chance1
+        self.ambil_saldo = ambil_saldo
+        while self.chance > 0:
+         self.ambil_saldo = input(" tekan yes jika ambil uang : ")
+         self.chance -= 1
+         match self.ambil_saldo:
+          case 'yes':
+            self.ambil_saldo = {(self.saldo_update or self.jumlah_saldo) - self.pilih}
+            
+            self.chance -= 1
+          case 'no' :
+               print(" exit ")
+               exit()
+               break
 
-# Scrapy stuff:
-.scrapy
+    def mencetak_saldo(self,tarik_saldo = ''):
+        self.tarik_saldo = tarik_saldo
+        self.ambil_saldo = str(self.ambil_saldo)
+        self.tarik_saldo = str(self.ambil_saldo)
 
-# Sphinx documentation
-docs/_build/
+        if self.tarik_saldo != 50_000:
+           print(" saldo anda cukup ")
+        elif self.tarik_saldo == 50_000:
+           print(" saldo anda tidak cukup")
+        else : None
 
-# PyBuilder
-.pybuilder/
-target/
+        print(f"saldo yang anda sekarang {self.ambil_saldo}")
 
-# Jupyter Notebook
-.ipynb_checkpoints
 
-# IPython
-profile_default/
-ipython_config.py
+rek1 = RekeningBank(1_000_000,"Selamat datang ",225060)
+print(f" ------------ {rek1.selamat_datang} -------- ")
+print(" ----------- Masukkan password ----------- \n")
+rek1.set_login() 
+print("\n") 
+print(" -------- Pilih Nominal -------- \n ")
+print(" 1. 100.000 \n 2. 300.000 \n 3. 500.000 \n 4. 1000.000 \n 5. 1.500.000")
+rek1.pilihnum()
+print ("------- ketik yes untuk menabung dan no untuk tidak --------- \n  ")
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+rek1.menabung_saldo()
+print("\n")
+rek1.menarik_saldo()
+rek1.mencetak_saldo()
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
